# esp32_baremetal_core1_bitbang_test

./: 0001-Hook-core1-init.patch  0001-hook-core1-init.patch  0002-Hijack-level-2-interrupt-for-CORE1.patch  0002-Hijack-level-2-interrupt-for-core1.patch  README.md  sdkconfig
main/: CMakeLists.txt  bare_metal_app_cpu.c  main.c  npiso.c  npiso.h
